--- a/package.json
+++ b/package.json
@@ -1,15 +1,11 @@
 {
-  "name": "tgapp",
+  "name": "my-merch-app-backend",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Backend for My Merch App",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "commonjs",
   "dependencies": {
     "axios": "^1.7.9",
     "dotenv": "^16.4.7",
